--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 
     <div class="ticker-wrap">
         <div class="ticker-move">
-            <div class="ticker-item">🚧 Folyamatos fejlesztés alatt...🔧</div>
+            <div class="ticker-item">‼️Nyomj a frissítés gombra hogy mindig megkapd az újdonságokat ‼️</div>
         </div>
     </div>
 </div>
