--- a/10.html
+++ b/10.html
@@ -174,7 +174,7 @@
     // ==========================================
     const config = {
         shift: "C", 
-        names: "Laci,Jani,Patrik,Zsuzsa,Peti,Barbi,Reni,Böbe,Kriszti"
+        names: "Laci,Jani,Patrik,Zsuzsa,Peti,Barbi,Reni,Böbe,Kriszti,Dani"
     };
 
     // ==========================================
