--- a/11.html
+++ b/11.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMT Monitor Pro v2.1</title>
+    <title>SMT Monitor Pro v2.2</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -241,7 +241,7 @@
 
     <header class="no-print">
         <div class="header-left">
-            <h1>🏭 SMT PRO <small style="font-size:0.5em; opacity:0.6; font-weight:400;">v2.1</small></h1>
+            <h1>🏭 SMT PRO <small style="font-size:0.5em; opacity:0.6; font-weight:400;">v2.2</small></h1>
         </div>
         <div style="display:flex; align-items:center; gap:15px;">
             <div class="connection-status">
@@ -461,6 +461,7 @@
                             </span>`;
                     }
 
+                    // *** ITT TÖRTÉNT A VÁLTOZTATÁS: 100-as és 200-as oldal ***
                     card.innerHTML = `
                         <div class="machine-header">
                             <span class="machine-name">Gép #${m.id} <span style="font-weight:400; color:#ccc;">| ${m.name}</span></span>
@@ -468,11 +469,11 @@
                         </div>
                         <div class="machine-body">
                             <div class="side-col">
-                                <div class="side-label">Front (1)</div>
+                                <div class="side-label">100-as oldal</div>
                                 ${generateGridHTML(lineId, m.id, 1, m.s1, lineErrors)}
                             </div>
                             <div class="side-col" style="border-left:1px solid #f0f0f0;">
-                                <div class="side-label">Rear (2)</div>
+                                <div class="side-label">200-as oldal</div>
                                 ${generateGridHTML(lineId, m.id, 2, m.s2, lineErrors)}
                             </div>
                         </div>`;
