--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
         <div onclick="openStaffPro(this)" class="nav-item"><i>👥</i> Szabadságok 2026 🔐</div>
         <div onclick="loadModule('9.html', false, this)" class="nav-item"><i>📷</i> Operátori Barcode Scan </div>
         <div onclick="loadModule('10.html', false, this)" class="nav-item"><i>🚮</i> Szemétkihordás Terv</div>
-        <div onclick="loadModule('11.html', false, this)" class="nav-item"><i>❌</i> Szárak kikapcsolása</div>
+        <div onclick="loadModule('11.html', false, this)" class="nav-item"><i>❌/✅</i> Szárak állapota</div>
     </nav>
 
     <footer>Szoftverfejlesztő:<br><strong style="color:white">GERGŐ ROLAND</strong><br>2026</footer>
@@ -662,7 +662,7 @@
         '8.html': '👥 Szabadságok (Staff Pro)',
         '9.html': '📷 Barcode Scan',
         '10.html': '🗑️ Szemétkihordás Terv',
-        '11.html': '🔌 Szárak kikapcsolása',
+        '11.html': '🔌 Szárak állapota',
         'home':   '🏠 Kezdőlap'
     };
 
