Update HTML structure and add new navigation item

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             display: flex; 
             justify-content: center; 
             align-items: center; 
-            gap: 12px;               
+            gap: 12px;                
             margin-bottom: 6px; 
             width: 100%;
             flex-wrap: wrap;         
@@ -397,7 +397,8 @@
         <h1 class="welcome-title"><span id="greeting-text">Üdv</span> <span class="highlight-blue">Felhasználó!</span></h1>
         
         <div id="display-date" class="current-date">
-            <span id="date-text">0000. 00. 00.</span><br>
+            <span id="date-text">0000. 00. 00.</span>
+
             <span id="name-day" class="nameday-text">...</span>
         </div>
 
@@ -414,7 +415,8 @@
         </div>
 
         <p class="instruction-text">
-            Használd a jobb oldalon lévő <span class="instruction-highlight">menügombot</span><br>
+            Használd a jobb oldalon lévő <span class="instruction-highlight">menügombot</span>
+
             a használat megkezdéséhez.
         </p>
 
@@ -444,6 +446,7 @@
     <nav class="nav-list">
         <div onclick="showHome(this)" class="nav-item"><i>🏠</i> Kezdőlap</div>
         <div onclick="loadModule('1.html', false, this)" class="nav-item"><i>🔍</i> Alkatrész Kereső</div>
+        <div onclick="loadModule('12.html', false, this)" class="nav-item"><i>📟</i> Model/Pcb kereső</div>
         <div onclick="loadModule('2.html', false, this)" class="nav-item"><i>💰</i> Bérkalkulátor</div>
         <div onclick="loadModule('3.html', false, this)" class="nav-item"><i>📅</i> Műszaknaptár</div>
         <div onclick="loadModule('4.html', false, this)" class="nav-item"><i>📝</i> Napi Jelentés segédlet</div>
@@ -653,6 +656,7 @@
    
     const moduleNames = {
         '1.html': '🔍 Alkatrész Kereső',
+        '12.html': '📟 Model/Pcb kereső',
         '2.html': '💰 Bérkalkulátor',
         '3.html': '📅 Műszaknaptár',
         '4.html': '📝 Napi Jelentés segédlet',
