--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
     <nav class="nav-list">
         <div onclick="showHome(this)" class="nav-item"><i>🏠</i> Kezdőlap</div>
         <div onclick="loadModule('1.html', false, this)" class="nav-item"><i>🔍</i> Alkatrész Kereső</div>
-        <div onclick="loadModule('12.html', false, this)" class="nav-item"><i>📟</i> Model/Pcb kereső</div>
+        <div onclick="loadModule('12.html', false, this)" class="nav-item"><i>🔎</i> Model/Pcb kereső</div>
         <div onclick="loadModule('2.html', false, this)" class="nav-item"><i>💰</i> Bérkalkulátor</div>
         <div onclick="loadModule('3.html', false, this)" class="nav-item"><i>📅</i> Műszaknaptár</div>
         <div onclick="loadModule('4.html', false, this)" class="nav-item"><i>📝</i> Napi Jelentés segédlet</div>
