Update input placeholder text in 12.html

--- a/12.html
+++ b/12.html
@@ -96,7 +96,7 @@
             </div>
             <div class="flex-1 w-full s-container">
                 <i class="fas fa-search absolute left-5 top-1/2 -translate-y-1/2 text-slate-500 text-xl pointer-events-none"></i>
-                <input type="text" id="s" placeholder="Modell, Panel vagy Maszk keresése..." class="s-input" autocomplete="off">
+                <input type="text" id="s" placeholder="Gépelj panel vagy model számot..." class="s-input" autocomplete="off">
                 <div id="sugg" class="s-list"></div>
             </div>
         </div>
