--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
         { date: "2026-08-20", name: "Államalapítás Ünnepe", type: "holiday", shiftDay: "B", shiftNight: "A" },
         { date: "2026-08-21", name: "Pihenőnap (Hosszú hétvége)", type: "holiday", shiftDay: "B", shiftNight: "A" },
         /* ITT HOZZÁADTUK A MŰSZAKOKAT A SZOMBATI MUNKANAPOKHOZ IS */
-        { date: "2026-08-29", name: "SZOMBATI MUNKANAP (Aug. 21 helyett)", type: "workday", shiftDay: "B", shiftNight: "A" },
+        { date: "2026-08-29", name: "SZOMBATI MUNKANAP (Aug. 21 helyett)", type: "workday", shiftDay: "C", shiftNight: "D" },
         { date: "2026-10-23", name: "1956-os Forradalom (Péntek)", type: "holiday", shiftDay: "D", shiftNight: "C" },
         { date: "2026-11-01", name: "Mindenszentek (Vasárnap)", type: "holiday", shiftDay: "B", shiftNight: "A" },
         /* ITT HOZZÁADTUK A MŰSZAKOKAT A SZOMBATI MUNKANAPOKHOZ IS */
