--- a/10.html
+++ b/10.html
@@ -32,7 +32,8 @@
             flex: 1;
             display: flex; flex-direction: column;
             justify-content: center; align-items: center;
-            padding: 20px;
+            /* JAVÍTÁS: Felső padding növelése, hogy a kártya ne tudjon felúszni a címkére */
+            padding: 70px 20px 20px 20px; 
             position: relative;
             background: radial-gradient(circle at top right, #2e1065 0%, transparent 50%),
                         radial-gradient(circle at bottom left, #1e1b4b 0%, transparent 50%);
@@ -47,6 +48,7 @@
             font-size: 0.8rem; font-weight: 600; letter-spacing: 1px;
             text-transform: uppercase; color: var(--text-dim);
             border: 1px solid rgba(255,255,255,0.05);
+            z-index: 10; /* JAVÍTÁS: Biztosan legfelül legyen */
         }
 
         .today-card {
@@ -60,7 +62,9 @@
         .today-date { font-size: 1.1rem; color: var(--text-dim); margin-bottom: 20px; }
         
         .today-names {
-            font-size: 3.2rem; font-weight: 800; line-height: 1.1; margin-bottom: 25px;
+            /* JAVÍTÁS: Méret csökkentése 3.2rem-ről 2.5rem-re az átfedés elkerülése miatt */
+            font-size: 2.5rem; 
+            font-weight: 800; line-height: 1.1; margin-bottom: 25px;
             background: linear-gradient(135deg, #fff 0%, #a5b4fc 100%);
             -webkit-background-clip: text; -webkit-text-fill-color: transparent;
             text-shadow: 0 10px 30px rgba(0,0,0,0.5);
@@ -141,7 +145,7 @@
 
 <script>
     // ==========================================
-    // ⚙️ BEÁLLÍTÁSOK
+    // ⚙️ BEÁLLÍTÁSOK (EREDETI)
     // ==========================================
     const config = {
         shift: "C", 
@@ -157,10 +161,10 @@
     }
 
     // =========================================================
-    // 🎩 A "KALAP MÓDSZER" ALGORITMUS (Fair Shuffle)
+    // 🎩 A "KALAP MÓDSZER" ALGORITMUS (EREDETI, VÁLTOZATLAN)
     // =========================================================
     
-    // Pszeudo-véletlen szám generátor (hogy mindig ugyanaz jöjjön ki adott napra)
+    // Pszeudo-véletlen szám generátor
     function mulberry32(a) {
         return function() {
             var t = a += 0x6D2B79F5;
@@ -216,7 +220,7 @@
         let p1 = generatedStream[targetShiftIndex * 2];
         let p2 = generatedStream[targetShiftIndex * 2 + 1];
 
-        // Páratlan létszám korrekció (nagyon ritka esetre)
+        // Páratlan létszám korrekció
         if (p1 === p2) {
              p2 = generatedStream[targetShiftIndex * 2 + 2];
         }
@@ -225,7 +229,7 @@
     }
 
     // =========================================================
-    // MEGJELENÍTÉS
+    // MEGJELENÍTÉS (VÁLTOZATLAN LOGIKA)
     // =========================================================
 
     function renderSchedule() {
@@ -253,7 +257,6 @@
         let shiftTypeFull = (config.shift === shifts.day) ? "☀️ NAPPAL (06-18)" : "🌙 ÉJSZAKA (18-06)";
         const headerHTML = `<div class="header-pill">${config.shift} MŰSZAK BEOSZTÁS</div>`;
 
-        // --- EZ AZ ÚJ MAGYARÁZÓ SZÖVEG ---
         const logicInfoHTML = `
             <div class="logic-info">
                 <strong>ℹ️ 100% Igazságos Sorsolás</strong>
