--- a/10.html
+++ b/10.html
@@ -149,7 +149,7 @@
     // ==========================================
     const config = {
         shift: "C", 
-        names: "Dani,Laci,Jani,Patrik,Zsuzsa,Peti,Barbi,Reni,Böbe,Kriszti"
+        names: "Dani,Laci,Jani,Patrik,Zsuzsa,Martina,Peti,Barbi,Reni,Böbe,Kriszti"
     };
 
     const CYCLE_START = new Date(2025, 6, 31); // Referencia dátum
