--- a/10.html
+++ b/10.html
@@ -51,7 +51,7 @@
     const config = {
         shift: "C", 
         // 1. NEVEK: Vesszővel elválasztva
-        names: "Martina,Dani,Laci,Jani,Patrik,Zsuzsa,Peti,Barbi,Reni,Böbe,Kriszti,ÚJ_TAG"
+        names: "Laci,Jani,Patrik,Zsuzsa,Peti,Barbi,Reni,Böbe,Martina,Kriszti,Dani"
     };
 
     // 2. MŰSZAK CIKLUS START (A te VBA kódodban: #7/31/2025#)
