--- a/10.html
+++ b/10.html
@@ -183,9 +183,7 @@
         const headerHTML = `<div class="header-pill">${config.shift} MŰSZAK BEOSZTÁS</div>`;
         const logicInfoHTML = `
             <div class="logic-info">
-                <strong>📊 VBA Excel Logika</strong>
-                A rendszer pontosan a beküldött Excel makró 
-                "csúszó eltolásos" logikáját használja.
+                <strong>A rendszer igazságos eltolás modszerrel dolgozik!
             </div>
         `;
 
