--- a/11.html
+++ b/11.html
@@ -375,10 +375,10 @@
         });
 
         const machines = [
-            { id: 1, name: 'CM602-L', s1: 15, s2: 15 },
-            { id: 2, name: 'CM602-L', s1: 15, s2: 15 },
-            { id: 3, name: 'NPM-D3', s1: 3,  s2: 15 },
-            { id: 4, name: 'NPM-D3', s1: 3,  s2: 3 }
+            { id: 1, name: 'High speed', s1: 15, s2: 15 },
+            { id: 2, name: 'High speed', s1: 15, s2: 15 },
+            { id: 3, name: 'Multi', s1: 3,  s2: 15 },
+            { id: 4, name: 'Multi', s1: 3,  s2: 3 }
         ];
 
         const allLines = ["F04", "F05", "F06", "F08"];
